<resources>
    <string name="app_name">SeminarHelper</string>
    <string name="server_address">Server Address</string>
    <string name="server_port">Server Port</string>
    <string name="app_logo_description">App Logo Here</string>
    <string name="connect">Connect</string>
    <string name="user_name">Your Username</string>
    <string name="homepage">Read Speech</string>
    <string name="queries">Queries</string>
    <string name="files">Files</string>
    <string name="title_activity_main">Homepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="send">Send</string>
    <string name="message_here">Your New Message Here</string>
    <string name="older_messages">Older Messages</string>
    <string name="nothing_to_display">No Files To Display</string>
    <string name="about">About</string>
    <string name="email">Your Email</string>
    <string name="announce">Announcements</string>
    <string name="speak">speak</string>
    <string name="warning">Say Exit To Stop</string>
    <string name="passwordhint">Your Password (for root login)</string>
    <string name="read_speech">Read Speech</string>
    <string name="event_details">Event Details</string>

    <string name="app_description">Developed at\nHack In The North 2017\n by</string>
    <string name="team_members">Radical Professionals</string>
    <string name="prabhat">Prabhat Singh</string>
    <string name="avishek">Avishek Sanvas</string>
    <string name="aditya">Aditya Chaudhary</string>
    <string name="abhey">Abhey Rana</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="french">French</string>
    <string name="abhey_github">https://github.com/Abhey</string>
    <string name="aditya_github">https://github.com/adityachd123</string>
    <string name="avishek_github">https://github.com/avisheksanvas</string>
    <string name="prabhat_github">https://github.com/forceawakened</string>
</resources>
